# IAP-ISM

./: README.md
IAP-ISM/: CMakeLists.txt  Makefile
IAP-ISM/include/: a.h
IAP-ISM/netcdf/: nc_reader.F90  nc_reader.mod  read_GrIS_test.F90  read_topg.F90  test.F90
IAP-ISM/script/: calc.ipynb  calc.py  plot_pie.ipynb  test.py  test_ncread.ipynb  test_ncread.py
IAP-ISM/src/: constant.F90  netcdf_io.F90  read_ncinput.F90.bak  read_ncinput_test.F90  test.F90  title.info
